feat: complete M2 product and content administration
